--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-tooltip": "^4.2.21",
     "url": "^0.11.0"
   },
   "devDependencies": {
